robustness/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.solo.io/v1","kind":"VirtualService","metadata":{"annotations":{},"name":"petstore","namespace":"gloo-system"},"spec":{"virtualHost":{"domains":["*"],"routes":[{"matchers":[{"prefix":"/"}],"routeAction":{"single":{"upstream":{"name":"default-petstore-8080","namespace":"gloo-system"}}}}]}}}
  creationTimestamp: "2020-06-25T21:10:42Z"
  generation: 10
  name: petstore
  namespace: gloo-system
  resourceVersion: "407157"
  selfLink: /apis/gateway.solo.io/v1/namespaces/gloo-system/virtualservices/petstore
  uid: 3a6d1249-ede0-4a96-afac-5942ef973584
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      options:
        retries:
          numRetries: 5
          retryOn: 5xx,reset,gateway-error,refused_stream
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
status:
  reported_by: gateway
  state: 1
  subresource_statuses:
    '*v1.Proxy.gloo-system.gateway-proxy':
      reported_by: gloo
      state: 1
